--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -87,8 +87,8 @@ Artifact-collector=Collects alien artifacts in an area around the chest
 Artifact-collector_r=Will pick up artifacts after each scan
 Biological-bullet-magazine=Extremely deadly to aliens!
 bio_land_mine=Extremely deadly to aliens!
-alien-artifact=Can be used as fuel. Will not cause any pollution
-small-alien-artifact=Can be used as fuel. Will not cause any pollution
+alien-artifact=Can be used as fuel. Will hardly cause any pollution
+small-alien-artifact=Can be used as fuel. Will hardly cause any pollution
 TerraformingStation_New=The T-station will lower evolution over time. Fuel it with alien stimulants. Will act like a radar if no stimulant available. Each consecutive station is less effective than the one before.
 AlienControlStation=A radar that can also control the minds of nearby enemies
 AlienControlStation_Area=A radar that can also control the minds of nearby enemies
