--- a/locale/en/locale.cfg
+++ b/locale/en/locale.cfg
@@ -79,6 +79,7 @@ bi-bio-cannon=Prototype artillery
 bi-bio-cannon-area=Prototype artillery
 NE-Napalm-Rocket=Napalm rocket
 bi-dart-rifle=Dart Rifle
+first-aid-kit=First aid kit
 
 [item-description]
 copper-bullet-magazine=Firearm magazine made from copper
@@ -87,8 +88,8 @@ Artifact-collector=Collects alien artifacts in an area around the chest
 Artifact-collector_r=Will pick up artifacts after each scan
 Biological-bullet-magazine=Extremely deadly to aliens!
 bio_land_mine=Extremely deadly to aliens!
-alien-artifact=Can be used as fuel. Will not cause any pollution
-small-alien-artifact=Can be used as fuel. Will not cause any pollution
+alien-artifact=Can be used as fuel. Will hardly cause any pollution
+small-alien-artifact=Can be used as fuel. Will hardly cause any pollution
 TerraformingStation_New=The T-station will lower evolution over time. Fuel it with alien stimulants. Will act like a radar if no stimulant available. Each consecutive station is less effective than the one before.
 AlienControlStation=A radar that can also control the minds of nearby enemies
 AlienControlStation_Area=A radar that can also control the minds of nearby enemies
@@ -138,7 +139,7 @@ bi-bio-cannon-poison-ammo=Rocket powered, Medium Poison Damage
 bi-bio-cannon-biological-ammo=Rocket powered, High Biological Damage
 bi-bio-cannon=Can ONLY fire at spawners! - Range 120 - Not yet capable of manual targeting
 NE-Napalm-Rocket=Causes fires in area of explosion
-
+first-aid-kit=Heal yourself
 
 [fluid-name]
 NE_nutrient-solution=Basic nutrient solution
